CMAKE_MINIMUM_REQUIRED(VERSION 3.8 FATAL_ERROR)

INCLUDE(ExternalProject)

PROJECT(Noon)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

LINK_DIRECTORIES(${CMAKE_BINARY_DIR})

### PreProcessor
SET(_PREPROC_TARGET PreProcessor)
ADD_EXECUTABLE(${_PREPROC_TARGET} "")

INCLUDE(util/preproc/CMakeLists.txt)

### Engine
SET(_ENGINE_TARGET Noon-Engine)
ADD_LIBRARY(${_ENGINE_TARGET} "")

INCLUDE(engine/CMakeLists.txt)

### Editor
SET(_EDITOR_TARGET Noon-Editor)
ADD_LIBRARY(${_EDITOR_TARGET} "")

INCLUDE(editor/CMakeLists.txt)

### Demo
SET(_DEMO_TARGET Noon-Demo)
ADD_EXECUTABLE(${_DEMO_TARGET} "")

SET(_DEMO_EDITOR_TARGET Noon-Demo-Editor)
ADD_EXECUTABLE(${_DEMO_EDITOR_TARGET} "")

INCLUDE(demo/CMakeLists.txt)
