TARGET_INCLUDE_DIRECTORIES(
    ${_DEMO_TARGET} PUBLIC
    ${CMAKE_CURRENT_LIST_DIR}/inc
)

TARGET_INCLUDE_DIRECTORIES(
    ${_DEMO_EDITOR_TARGET} PUBLIC
    ${CMAKE_CURRENT_LIST_DIR}/inc
)

FILE(GLOB_RECURSE _DEMO_INCLUDES RELATIVE ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_LIST_DIR}/inc/*.hpp ${CMAKE_CURRENT_LIST_DIR}/inc/*.h)
FILE(GLOB_RECURSE _DEMO_SOURCES  RELATIVE ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_LIST_DIR}/src/*.cpp ${CMAKE_CURRENT_LIST_DIR}/src/*.c)

TARGET_SOURCES(
    ${_DEMO_TARGET} PRIVATE
    ${_DEMO_INCLUDES}
    ${_DEMO_SOURCES}
)

TARGET_SOURCES(
    ${_DEMO_EDITOR_TARGET} PRIVATE
    ${_DEMO_INCLUDES}
    ${_DEMO_SOURCES}
)

TARGET_LINK_LIBRARIES(
    ${_DEMO_TARGET}
    ${_ENGINE_TARGET}
)

TARGET_COMPILE_DEFINITIONS(
    ${_DEMO_EDITOR_TARGET}
    PUBLIC -DEDITOR_BUILD
)

TARGET_LINK_LIBRARIES(
    ${_DEMO_EDITOR_TARGET}
    ${_ENGINE_TARGET}
    ${_EDITOR_TARGET}
)

ADD_CUSTOM_TARGET(
    run
    COMMAND $<TARGET_FILE:${_DEMO_TARGET}>
    DEPENDS ${_DEMO_TARGET}
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/demo
)

ADD_CUSTOM_TARGET(
    valgrind
    COMMAND valgrind $<TARGET_FILE:${_DEMO_TARGET}>
    DEPENDS ${_DEMO_TARGET}
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/demo
)

ADD_CUSTOM_TARGET(
    run-editor
    COMMAND $<TARGET_FILE:${_DEMO_EDITOR_TARGET}>
    DEPENDS ${_DEMO_EDITOR_TARGET}
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/demo
)

SET_PROPERTY(DIRECTORY ${CMAKE_SOURCE_DIR}
    PROPERTY VS_STARTUP_PROJECT "${_DEMO_TARGET}")

SET_TARGET_PROPERTIES(${_DEMO_TARGET} PROPERTIES
    VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/demo"
    VS_DEBUGGER_ENVIRONMENT "PYTHONHOME=${CMAKE_BINARY_DIR}/$(Configuration)")