TARGET_INCLUDE_DIRECTORIES(
    ${_EDITOR_TARGET} PUBLIC
    ${CMAKE_CURRENT_LIST_DIR}/inc
)

FILE(GLOB_RECURSE _EDITOR_INCLUDES RELATIVE ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_LIST_DIR}/inc/*.hpp ${CMAKE_CURRENT_LIST_DIR}/inc/*.h)
FILE(GLOB_RECURSE _EDITOR_SOURCES  RELATIVE ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_LIST_DIR}/src/*.cpp ${CMAKE_CURRENT_LIST_DIR}/src/*.c)

TARGET_SOURCES(
    ${_EDITOR_TARGET} PRIVATE
    ${_EDITOR_INCLUDES}
    ${_EDITOR_SOURCES}
)

TARGET_LINK_LIBRARIES(
    ${_EDITOR_TARGET}
    ${_ENGINE_TARGET}
)
